--- a/.github/workflows/build-various-nodes.yml
+++ b/.github/workflows/build-various-nodes.yml
@@ -8,7 +8,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-latest] #exclude:macos-latest, windows-latest
+        os: [ubuntu-latest, macos-latest, windows-latest]
         node: [14, 16]
 
     runs-on: ${{ matrix.os }}
@@ -17,7 +17,7 @@ jobs:
       uses: actions/checkout@v3
     - name: Restore Cache
       id: cache
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: ~/.npm
         key: ${{ runner.os }}-npm-${{ matrix.node }}-${{ hashFiles('**/package-lock.json') }}
@@ -33,7 +33,7 @@ jobs:
     - run: npm run build --if-present    
     - name: Save Cache    
       if: steps.cache.outputs.cache-hit != 'true'
-      uses: actions/cache@v2
+      uses: actions/cache@v3
       with:
         path: ~/.npm
         key: ${{ runner.os }}-npm-${{ matrix.node }}-${{ hashFiles('**/package-lock.json') }}
@@ -48,7 +48,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        node: [14, 16]
+        node: [18, 22]
 
     runs-on: ${{ matrix.os }}
     steps:
@@ -58,6 +58,6 @@ jobs:
           path: downloaded-content
       - run: |
           ls downloaded-content
-      - uses: geekyeggo/delete-artifact@v2
+      - uses: geekyeggo/delete-artifact@v3
         with:
             name: my-app-${{ matrix.os }}-${{ matrix.node }}
